# ontology-curation-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  oca.sqlite3  pyproject.toml
backend/app/: BibPipelineCombined.py  __init__.py  cli.py  config.py  github_export.py  main.py
backend/tests/: test_browser_api.py  test_cli_ingest.py  test_cli_literature.py  test_curation_prompt.py  test_entry_generation.py  test_extraction_workflow.py  test_odk_integration.py  test_odk_workflow.py  test_review_policy.py  test_zotero_api_sync.py  test_zotero_lit_md.py  test_zotero_workflow.py
docker/: Dockerfile
docs/: ai-behavior.md  api.md  architecture.md  code-overview.md  current-state.md  database-schema.md  implementation-roadmap.md  odk-integration.md  odk-workflow-and-code-overview.md  review-workflow.md  ui-wireframe.md
examples/: review_template.tsv
literature/: combined_literature.md  literature.json
literature/Markdown/: Aburi und Smith - 2004 - A Combined Simulation and Kirkwood−Buff Approach to Quantify Cosolvent Effects on the Conformational.md  (+23 more)
logs/: odk_workflow_audit.jsonl
ontology_curation_assistant/: __init__.py  __main__.py
ontology_curation_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/extraction/: term_extraction_v1.md  (+1 more)
schemas/: candidate_relation.schema.json  candidate_term.schema.json
zotero_lit_md/: README.md  __init__.py  __main__.py  chunking.py  cli.py  diagnostics.py  local_pdf.py  markdown_writer.py  pdf_extractor.py  schema.py  text_cleaning.py  zotero_client.py
(+68 files in other folders)
