[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology-curation-assistant"
version = "0.1.0"
description = "Human-in-the-loop AI-assisted ontology curation workflow with ODK-compatible exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "pypdf[crypto]>=6.12.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.scripts]
oca = "backend.app.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
